--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.10.0",
     "cloudinary": "^2.7.0",
     "jwt-decode": "^4.0.0",
@@ -19,6 +21,7 @@
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
+    "stripe": "^18.4.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
