--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^7.8.0",
     "axios": "^1.10.0",
     "cloudinary": "^2.7.0",
+    "framer-motion": "^12.23.12",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
